syntax = "proto3";

package api.v1.project;

import "google/protobuf/timestamp.proto";
import "model/git.proto";
import "model/notification.proto";
import "model/pipeline.proto";

// The top most model that capsules etc belong to.
message Project {
  // The unique id of the project.
  string project_id = 1;
  // When the project was created.
  google.protobuf.Timestamp created_at = 3;
  // When the project was last updated.
  google.protobuf.Timestamp updated_at = 4;
  // The installation id of the project.
  string installation_id = 5;
  model.GitStore git_store = 6;
  // The notifiers for the project.
  NotificationNotifiers notifiers = 7;
  // Environment pipelines for the project
  repeated model.Pipeline pipelines = 8;
}

// Update msg for a project.
message Update {
  message Pipelines {
    // The pipelines to update.
    repeated model.Pipeline pipelines = 1;
  }

  oneof field {
    // Set the git store.
    model.GitStore set_git_store = 1;
    // Set the notifiers.
    NotificationNotifiers notifiers = 2;
    // Set the pipelines
    Pipelines pipelines = 3;
  }
}

message NotificationNotifiers {
  // If the notifiers are disabled, notifiers from parent are not inherited even
  // if these notifiers at this level are empty.
  bool disabled = 1;
  repeated model.NotificationNotifier notifiers = 2;
}
